# drawing-analyzer

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  run_headless.py
.github/workflows/: ci.yml  release.yml
docs/: PERFORMANCE_AND_COST_VALIDATION.md  RELEASE_ACCEPTANCE_TEMPLATE.md  RELEASE_WINDOWS.md  WINDOWS_ACCEPTANCE.md
docs/examples/: README.md  fire_protection.md
packaging/windows/: app_entry.py  check_release_version.py  drawing-analyzer.spec  installer.iss  make_manifest.py
scripts/: benchmark_drawing_analyzer.py  check_licenses.py  run_acceptance.py  scan_secrets.py
src/drawing_analyzer/: __init__.py  __main__.py  anchor.py  annotate.py  batch_critique.py  batch_digest.py  citation_check.py  client.py  colors.py  cost.py  critique.py  cross_qc.py  diagnostics.py  digest.py  digest_cache.py  export.py  file_upload.py  focus.py  gui.py  help_content.py  html_report.py  investigate.py  ledger.py  models.py  pipeline.py  profiles.py  prose_harvest.py  reference_audit.py  render.py  render_spool.py  review_planner.py  run_journal.py  set_identity.py  source_registry.py  spec_documents.py  stage_cache.py  synthesis.py  tile_artifacts.py  tiling.py  tracing.py  (+1 more)
src/drawing_analyzer/auditors/: __init__.py  arithmetic.py  naming.py  references.py  sheet_ids.py  sheet_index.py  titleblock.py
src/drawing_analyzer/core/: api_config.py  api_key_store.py  app_paths.py  pricing.py  tokenizer.py  updates.py
tests/: conftest.py  test_api_key_store.py  test_cost.py  test_critique_input_order.py  test_diagnostics.py  test_drawing_acceptance.py  test_drawing_anchor.py  test_drawing_annotate.py  test_drawing_auditors.py  test_drawing_batch.py  test_drawing_batch_critique.py  test_drawing_cache_identity.py  test_drawing_cost_optimization.py  test_drawing_critique.py  test_drawing_cross_qc.py  test_drawing_dedup_lifecycle.py  test_drawing_digest.py  test_drawing_digest_cache.py  test_drawing_export.py  test_drawing_findings.py  test_drawing_focus.py  test_drawing_geometry.py  test_drawing_html_report.py  test_drawing_investigate.py  test_drawing_ledger.py  test_drawing_markup_coverage.py  test_drawing_markup_rich.py  test_drawing_models.py  test_drawing_profiles.py  test_drawing_qc_pipeline.py  test_drawing_reference_audit.py  test_drawing_render.py  test_drawing_set_review_notes.py  test_drawing_sheet_ids.py  test_drawing_stage_cache.py  test_drawing_synthesis.py  test_drawing_tiling.py  test_drawing_tokens.py  test_drawing_usage.py  test_drawing_verify.py  (+23 more)
tests/fixtures/: __init__.py  fake_anthropic.py  fake_context.py  gauntlet.py
