[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drawing-analyzer"
version = "0.1.0"
description = "Extract structured information from construction-drawing PDF sets using Claude vision."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
    "anthropic>=0.97,<0.98",
    "pymupdf",
    "tiktoken",
    "platformdirs",
]

[project.optional-dependencies]
gui = ["customtkinter", "tkinterdnd2"]
dev = ["pytest>=9.0"]

# Launch the standalone GUI with `drawing-analyzer` (or `python -m drawing_analyzer`).
[project.gui-scripts]
drawing-analyzer = "drawing_analyzer.gui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["src"]
markers = [
    "network: tests that require real Anthropic API access",
]
