[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drawing-analyzer"
version = "1.1.0"
description = "Extract structured information from construction-drawing PDF sets using Claude vision."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
    "anthropic>=0.97,<0.98",
    "pymupdf",
    "tiktoken",
    "platformdirs",
    "pypdf>=4.0",
    "python-docx>=1.1",
]

[project.optional-dependencies]
# keyring backs the credential-safe API-key store (Windows Credential Manager /
# macOS Keychain / Secret Service); without it the key is session-only unless
# the user explicitly consents to a plaintext file (DA-032).
gui = ["customtkinter", "tkinterdnd2", "keyring"]
dev = ["pytest>=9.0"]
# The headless-Chromium report-security suite (tests marked `browser`).
# Pinned for reproducible CI: the Playwright version fixes the Chromium build
# that `playwright install chromium` fetches. Not needed for the default suite,
# which skips the browser tests when Playwright/its browser is absent.
browsertest = ["playwright==1.61.0"]

# Launch the standalone GUI with `drawing-analyzer` (or `python -m drawing_analyzer`).
[project.gui-scripts]
drawing-analyzer = "drawing_analyzer.gui:main"

[tool.setuptools.packages.find]
where = ["src"]

# The built-in profiles dir ships empty by default (review checklists are
# model-authored per set — Phase A); the stanza stays so any .md dropped into
# src/drawing_analyzer/profiles/ still rides the wheel, and user-dir discovery
# (~/.drawing_analyzer/profiles) is unaffected. Worked examples: docs/examples/.
[tool.setuptools.package-data]
drawing_analyzer = ["profiles/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["src"]
markers = [
    "network: tests that require real Anthropic API access",
    "browser: headless-Chromium security tests (need Playwright + a browser; run on Linux CI)",
]
